<resources>
    //Application
    <string name="app_name">Smart ArCle</string>
    <string name="smart" translatable="false">Smart </string>
    <string name="arcle" translatable="false">ArCle</string>

    //Notification
    <string name="default_notification_channel_id" translatable="false">your_channel_id</string>
    <string name="notif_channel_name" translatable="false">Notification Channel Name</string>
    <string name="notif_channel_description" translatable="false">Notification Channel Description</string>

    //Account
    <string name="account">Account</string>
    <string name="as">As</string>
    <string name="owner">Owner</string>
    <string name="security">Security</string>

    //Sign Up and Login
    <string name="create_ur_acc">Create Your Account</string>
    <string name="enter_ur_data">Enter Your Data</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="forgot_pw">Forgot your password?</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_name">Fill your name please!</string>
    <string name="message_email">Incorrect email format!</string>
    <string name="message_password">Passwords must have at least 8 characters!</string>

    //Toast Login and Signup
    <string name="toast_fill">Please fill in all fields!</string>
    <string name="toast_invalid_type">Invalid user type!</string>
    <string name="toast_login_failed">Log In Failed!</string>
    <string name="toast_failed_token">Failed to get token!</string>
    <string name="toast_signup">Successfully Sign Up</string>
    <string name="toast_failed_signup">Sign Up Failed!</string>
    <string name="toast_logout">Log Out</string>

    //Forget Password
    <string name="message_forget_pw">Please change your password</string>
    <string name="new_pw">Your new password</string>
    <string name="confirm_new_pw">Confirm your new password</string>
    <string name="change_pw">Change password</string>
    <string name="fill_email">Fill your email please!</string>
    <string name="fill_pw">Fill your password please!</string>
    <string name="pw_not_match">Password doesn\'t match</string>
    <string name="toast_reset_success">Password successfully changed</string>
    <string name="toast_reset_failed">Failed to change the password:</string>
    <string name="toast_reset_email">Check your email to reset your password</string>

    //Home
    <string name="profile_acc">Profile Account</string>
    <string name="plate">License Plate</string>
    <string name="sec">Security</string>
    <string name="vehicle_found">Vehicle Found</string>
    <string name="parking">Parking</string>
    <string name="drive">Drive</string>
    <string name="report_missing">Report Missing</string>
    <string name="report_police">Report to Police</string>
    <string name="vehicle_loc">Vehicle Location</string>
    <string name="setting">Setting</string>

    //Toast Home
    <string name="toast_failed_load">Failed to load user data: </string>
    <string name="toast_failed_relay">Failed to set relay state</string>
    <string name="toast_parking">Vehicle in Parking Mode</string>
    <string name="toast_drive">Vehicle in Drive Mode</string>
    <string name="toast_failed_retrieve">Failed to retrieve token: </string>
    <string name="toast_plate">Plate number not found</string>
    <string name="toast_error_fetch">Error fetching vehicle data: </string>
    <string name="toast_theft">Theft detected!</string>
    <string name="toast_no_theft">No theft detected</string>
    <string name="toast_failed_fetch_owners">Failed to Fetch Owners</string>
    <string name="toast_not_park">Vehicle is not in parking mode</string>
    <string name="toast_failed_loc">Failed to get location</string>
    <string name="toast_failed_send">Failed to send report: </string>
    <string name="toast_report">Report has been sent to security</string>
    <string name="toast_no_missing">No missing reports</string>

    //Setting
    <string name="user_profile">User Profile</string>
    <string name="vehicle_profile">Vehicle Profile</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>

    //User Profile
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="username">User</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>

    //Toast User Profile
    <string name="toast_success_image">Successful upload an image</string>
    <string name="toast_failed_image">Failed upload an image!</string>
    <string name="toast_select">Please select an image first!</string>
    <string name="toast_not_internet">No internet connection!</string>
    <string name="toast_login_again">User email is empty. Please log in again</string>

    //Toast Vehicle Profile
    <string name="toast_success_data">Data uploaded successfully</string>
    <string name="toast_failed_data">Failed to upload data!</string>

    //Toast Vehicle Location
    <string name="toast_permission_granted">Notifications permission granted</string>
    <string name="toast_permission_reject">Notifications permission rejected!</string>
    <string name="toast_failed_report">Failed to send report!</string>
    <string name="toast_success_report">Report has been sent to security</string>
    <string name="toast_success_found">Report has been sent to owner</string>
    <string name="toast_geofence_add">Geofencing feature added</string>
    <string name="toast_geofence_remove">Geofencing feature removed</string>
    <string name="toast_geofence_not_add_permission">Geofencing feature not added: Insufficient location permission</string>
    <string name="toast_geofence_not_add">"Geofencing feature not added: "</string>

    //Vehicle Profile
    <string name="enter_ur_data_vehicle">Enter Your Data Vehicle</string>
    <string name="plate_vehicle">Vehicle Registration Number</string>
    <string name="name_owner">Name of Owner</string>
    <string name="address_vehicle">Address</string>
    <string name="brand_vehicle">Brand</string>
    <string name="colour_vehicle">Colour</string>

    <string name="empty_data">Empty Data</string>
    <string name="title_activity_vehicle_loc_owner" translatable="false">VehicleLocOwner</string>

    <string name="change_to_ind">Change to Indonesian</string>
    <string name="change_to_eng">Change to English</string>

    <string name="send_notif">Send Notification</string>
    <string name="notif_title">Vehicle has been stolen</string>
    <string name="notif_subtext">Geofencing Alert</string>
    <string name="title_activity_vehicle_loc_security" translatable="false">VehicleLocSecurity</string>
    <string name="notif_message" translatable="false">Vehicle  xxxxx with License Plate Number xxxx has been stolen  Immediately Close the Gate and Report to Security!</string>

    <string name="load_post_onCancelled">Load Post onCancelled</string>
</resources>