<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".Account">

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/account"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:fontFamily="@font/ppregular"
        app:layout_constraintEnd_toStartOf="@+id/as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_owner_acc"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/as"
        android:textColor="@color/blue"
        android:textSize="23sp"
        android:fontFamily="@font/ppbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_security_acc"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_owner_acc"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cv_security_acc"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_owner_acc"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/owner_acc"
            android:contentDescription="@string/owner"/>
        
        <TextView
            android:id="@+id/tv_owner_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/owner"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:fontFamily="@font/ppsemibold"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_security_acc"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/as"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_owner_acc">

        <ImageView
            android:id="@+id/iv_security_acc"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/security_acc"
            android:contentDescription="@string/security"/>

        <TextView
            android:id="@+id/tv_security_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/security"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:fontFamily="@font/ppsemibold"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>