<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".security.HomeSecurity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/rectangle_home"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-40dp"
            android:background="@drawable/rectangle_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/smartarcle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/ppsemibold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/username_home_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sec"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/ppsemibold"
            android:layout_marginTop="90dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_home_sec"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/profile_acc"
            android:src="@drawable/security_acc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_loc_home_sec"
            android:layout_width="320dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rectangle_home"
            app:layout_constraintBottom_toTopOf="@id/cv_vehicle_found_home_sec">

            <ImageView
                android:id="@+id/iv_loc_home_sec"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/vehicle_loc"
                android:src="@drawable/loc_light" />

            <TextView
                android:id="@+id/tv_loc_home_sec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="115dp"
                android:text="@string/vehicle_loc"
                android:textSize="14sp"
                android:textColor="@color/dark_blue"
                android:textAlignment="center"
                android:fontFamily="@font/ppsemibold"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_vehicle_found_home_sec"
            android:layout_width="320dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_loc_home_sec"
            app:layout_constraintBottom_toTopOf="@id/cv_setting_home_sec">

            <ImageView
                android:id="@+id/iv_vehicle_found_home_sec"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/vehicle_found"
                android:src="@drawable/vehicle_light" />

            <TextView
                android:id="@+id/tv_vehicle_found_home_sec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="115dp"
                android:text="@string/vehicle_found"
                android:textSize="14sp"
                android:textColor="@color/dark_blue"
                android:textAlignment="center"
                android:fontFamily="@font/ppsemibold"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_setting_home_sec"
            android:layout_width="320dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_vehicle_found_home_sec"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iv_setting_home_sec"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/setting"
                android:src="@drawable/setting_light" />

            <TextView
                android:id="@+id/tv_setting_home_sec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="115dp"
                android:text="@string/setting"
                android:textSize="14sp"
                android:textColor="@color/dark_blue"
                android:textAlignment="center"
                android:fontFamily="@font/ppsemibold"/>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>